test/sema/traits/variable_with_trait_mismatched_types.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait A {}

trait B<T> {}

struct S {
  impl A;
}

struct S2 {
  impl B<S>;
}

fn foo<T : A, U : B<T>>() {
  let u: U;
  let s2 = S2{};

  // CHECK: [[# @LINE + 1]]:7: error: expected to assign 'U' but received 'S2' instead
  u = s2;
}

fn main() {}
